CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
ENABLE_LANGUAGE(CUDA)

PROJECT("cloudrt")
SET(NAME "cloudrt")

FIND_PROGRAM(CCACHE ccache)
IF(CCACHE)
  SET(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE})
ELSE()
  message("ccache cannot be found")
  ENDIF()

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
ENDIF()

INCLUDE_DIRECTORIES("src/" "include/" "src/glm")

ADD_DEFINITIONS(-DNAME="${NAME}")

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb -fno-omit-frame-pointer -Wall -Wextra -Wpedantic -DDEBUG")
SET(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -O3 -s -DNDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
ADD_COMPILE_OPTIONS(${CMAKE_NVCC_FLAGS} -fPIC -Wall -Wextra)

FILE(GLOB SOURCES "src/*.cu" "src/*.cpp")
ADD_EXECUTABLE(${NAME} "${SOURCES}")
TARGET_LINK_LIBRARIES(${NAME} PRIVATE stdc++ pthread)

ADD_CUSTOM_TARGET(run
  COMMAND build/${NAME}
  DEPENDS ${NAME}
  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
)
SET_PROPERTY(TARGET ${NAME} PROPERTY CUDA_STANDARD 20)
SET_PROPERTY(TARGET ${NAME} PROPERTY CUDA_ARCHITECTURES OFF)
SET_PROPERTY(TARGET ${NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
SET_PROPERTY(TARGET ${NAME} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
